# sgept-mcp-servers

./: .gitignore  CLAUDE.md  DIAGNOSTICO_FINAL.md  MOVED-iran-monitor-a2a.md  QUICK_TEST.sh  test_api_direct.py  test_auth_formats.py  test_corrected_api.py  test_debug_keys.py  test_dpa_api.py  test_gta.py  test_with_brackets.py
a2a-protocol/: .gitignore  README.md  pyproject.toml
a2a-protocol/docs/: EXAMPLE-GTA-BACKEND.md
a2a-protocol/src/a2a_protocol/: __init__.py  _mock_server.py  auth.py  backend.py  card.py  client.py  errors.py  event_bus.py  jsonrpc.py  lifecycle.py  message_history.py  models.py  server.py  sse.py
a2a-protocol/tests/: mock_backend.py  test_card.py  test_generalization_smoke.py  test_jsonrpc.py  test_lifecycle.py  test_models.py
apollo-mcp/: README.md  pyproject.toml
apollo-mcp/src/apollo_mcp/: __init__.py  api.py  formatters.py  models.py  server.py
dpa-mcp/: .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  pyproject.toml
dpa-mcp/resources/: dpa_action_type_list.md  dpa_activity_tracking_handbook.md  dpa_economic_activity_list.md  dpa_event_type_list.md  dpa_intervention_type_list.md  dpa_jurisdictions.md  dpa_policy_area_list.md
dpa-mcp/src/dpa_mcp/: __init__.py  api.py  formatters.py  models.py  resources_loader.py  server.py
dpa-mnt/: CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml
dpa-mnt/qa/: README.md  run_review_format.py
dpa-mnt/qa/fixtures/: event_detail_full.json  intervention_context_full.json  issue_comment.json  review_queue_small.json  source_result_pdf.json
dpa-mnt/qa/standards/: event_detail_full.md  intervention_context_full.md  issue_comment.md  review_queue_empty.md  review_queue_small.md  source_result_pdf.md
dpa-mnt/resources/: comment_templates.md  issue_ids.md  review_criteria.md  source_extraction_notes.md  status_id_decision_tree.md
dpa-mnt/src/dpa_mnt/: __init__.py  api.py  constants.py  formatters.py  models.py  resources_loader.py  server.py  source_fetcher.py  storage.py
dpa-mnt/tests/unit/: test_formatters.py  test_inputs.py  test_source_fetcher.py  test_storage.py
gta-mcp/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LICENSE  MIGRATION_NOTES.md  PRIVACY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  USAGE_EXAMPLES.md  USE_CASES.md  pyproject.toml
gta-mcp/.github/workflows/: ci.yml  publish.yml
gta-mcp/qa/: COMPREHENSIVE-QA-REPORT.md  FINAL_QA_REPORT.md  RED-TEAM-QUALITATIVE-REPORT.md  check_schema.py  extract_reference_data.py  fix_counts.py  gold_standard.json  investigate.py  iterative_eval.py  multipass-evaluation-report.md  multipass-test-results.json  prompt-evaluation-report-v2.md  prompt-evaluation-report.md  prompt-test-results-v2.json  prompt-test-results.json  run_multipass_tests.py  run_prompt_tests.py  run_prompts.py  run_prompts_v2.py
gta-mcp/qa/eval_results/: round_1_20260212_230317.json  round_2_20260212_231139.json  round_3_20260212_231934.json
gta-mcp/resources/: GTA intervention type descriptions.md  api_eligible_firm_list.md  api_implementation_level_list.md  api_sector_list.md  date_fields_guide.md  gta_intervention_type_list.md  gta_jurisdictions.md  mast_chapters.md  search_guide.md
gta-mcp/resources/data/: hs_codes.json  product_sector_mapping.json
gta-mcp/resources/guides/: analytical_caveats.md  common_mistakes.md  data_model.md  exclusion_filters.md  parameters.md  query_examples.md  query_intent_mapping.md  query_syntax.md  search_strategy.md
gta-mcp/resources/reference/: jurisdiction_groups.md  mast_chapters.md
gta-mcp/src/gta_mcp/: __init__.py  api.py  auth.py  formatters.py  hs_lookup.py  models.py  resources_loader.py  server.py  url_builder.py
gta-mnt/: CHANGELOG.md  CLAUDE.md  QUICKSTART.md  README.md  STORAGE-FEATURE-COMPLETE.md  pyproject.toml
gta-mnt/qa/: README.md  run_review_format.py
gta-mnt/qa/fixtures/: issue_comment.json  step1_queue_small.json
gta-mnt/qa/standards/: issue_comment.md  step1_queue_empty.md  step1_queue_small.md
gta-mnt/resources/: comment_templates.md  framework_ids.md  review_criteria.md  source_extraction_notes.md  status_id_decision_tree.md
gta-mnt/src/gta_mnt/: __init__.py  api.py  auth.py  cli.py  constants.py  formatters.py  models.py  resources_loader.py  server.py  source_fetcher.py  storage.py
gta-mnt/tests/: __init__.py
gta-mnt/tests/unit/: test_api.py  test_api_writes.py  test_find_duplicates.py  test_formatters.py  test_inputs.py  test_source_fetcher.py  test_storage.py
iran-monitor-api/: .gitignore  DEPLOY.md  DEVELOPING.md  ONBOARDING.md  README.md  pyproject.toml
iran-monitor-api/client/: README.md  iran_monitor_client.py
iran-monitor-api/deploy/: Caddyfile
iran-monitor-api/documentation/: 01-design-doc.md  02-access-surface-proposal.md  03-a2a-retrofit-plan.md
iran-monitor-api/landing/: index.html
iran-monitor-api/scripts/: add-pilot-key.py  install-on-metis.sh
iran-monitor-api/spike/: local-demo.py  qa-advisory-round.sh  run-spike.py  synthesize-qa.py  test-protocol.md  test-scenarios.json
iran-monitor-api/src/iran_monitor_api/: __init__.py  backend.py  briefing_writer.py  config.py  db.py  email_delivery.py  errors.py  gather.py  (+8 more)
iran-monitor-api/systemd/: iran-monitor-api.service  iran-monitor-worker.service
iran-monitor-api/tests/: conftest.py  test_backend.py  test_briefing_writer.py  test_db.py  test_email_delivery.py  test_intel_base.py  test_models.py  test_models_extended.py  test_orchestrator.py  test_routes.py  test_signing.py
metis-mcp/: README.md  pyproject.toml
metis-mcp/tests/: test_enforcement.py  test_engine.py  test_registry.py
scrapling-mnt/: .gitignore  README.md  pyproject.toml
scrapling-mnt/tests/: test_allowlist.py  test_cache.py  test_cli.py  test_client_errors.py  test_client_polling.py  test_client_request_mapping.py
sgept-slack-mcp/: .gitignore  README.md  identities.json  pyproject.toml
sgept-slack-mcp/tests/: __init__.py  conftest.py  test_cache.py  test_client.py  test_new_tools.py  test_security.py  test_tools.py
(+105 files in other folders)
