[project]
name = "a2a-protocol"
version = "0.1.0"
description = "Google A2A (Agent-to-Agent) protocol implementation as a reusable FastAPI server + Python client. Backend-agnostic: implement AgentBackend and the protocol surface (agent card, JSON-RPC, SSE, lifecycle, multi-turn) is provided. Used by iran-monitor-api; transferable to GTA, DPA, and other SGEPT assets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_protocol"]
