[project]
name = "apollo-mcp"
version = "0.1.0"
description = "MCP server for Apollo.io contact discovery — search people, companies, and enrich emails"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "St Gallen Endowment for Prosperity through Trade", email = "info@sgept.org"},
]
keywords = ["mcp", "apollo", "contact-discovery", "email-enrichment", "prospecting"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
apollo-mcp = "apollo_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apollo_mcp"]

[tool.uv]
dev-dependencies = []
