[project]
name = "dpa-mcp"
version = "0.1.0"
description = "MCP server for Digital Policy Alert database"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"mcp>=1.0.0",
	"httpx>=0.27.0",
	"pydantic>=2.0.0",
]

[project.scripts]
dpa-mcp = "dpa_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
