[project]
name = "dpa-mnt"
version = "0.1.0"
description = "DPA Monitoring MCP Server - Buzessa Claudini (review) / Buzetta Claudini (author)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pymysql>=1.1.0",
    "boto3>=1.34.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
dpa-mnt = "dpa_mnt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
