[project]
name = "sgept-gta-mcp"
version = "0.3.0"
description = "MCP server for Global Trade Alert — 75,000+ trade policy interventions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "St Gallen Endowment for Prosperity through Trade", email = "info@sgept.org"},
]
keywords = ["mcp", "trade-policy", "gta", "global-trade-alert", "sgept"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
gta-mcp = "gta_mcp.server:main"

[project.urls]
Homepage = "https://www.globaltradealert.org"
Repository = "https://github.com/global-trade-alert/sgept-mcp-servers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gta_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"resources" = "gta_mcp/resources"

[tool.uv]
dev-dependencies = []
