[project]
name = "gta-mnt"
version = "0.1.0"
description = "GTA Monitoring MCP Server - Internal review automation (Sancho Claudino)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "pymysql>=1.1.0",          # Direct MySQL database access
    "boto3>=1.34.0",           # S3 file access
    "pypdf>=4.0.0",            # PDF text extraction
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "lxml>=5.0.0",             # HTML parser backend
]

[project.scripts]
gta-mnt = "gta_mnt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
