[project]
name = "iran-monitor-api"
version = "0.1.0"
description = "Queryable inference API for the Iran Conflict Scenario Monitor — novel-scenario assessment with reasoning trace and signed audit records"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "pynacl>=1.5.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
    "a2a-protocol",
]

[tool.uv.sources]
a2a-protocol = { path = "../a2a-protocol", editable = true }

[project.scripts]
iran-monitor-api = "iran_monitor_api.main:run"
iran-monitor-worker = "iran_monitor_api.worker:run"
iran-monitor-seal-intel-base = "iran_monitor_api.intel_base:seal_cli"
iran-monitor-generate-key = "iran_monitor_api.signing:generate_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/iran_monitor_api"]
