[project]
name = "scrapling-mnt"
version = "0.1.0"
description = "Scrapling MCP Server - Stealth web scraping for Sancho Claudito (GTA + DPA author)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "scrapling>=0.4.7",
    "curl-cffi>=0.7.0",
    "camoufox[geoip]>=0.4.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "google-genai>=0.3.0",
]

[project.scripts]
scrapling-mnt = "scrapling_mnt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapling_mnt"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
