[project]
name = "scrapling-mnt"
version = "0.2.0"
description = "Thin MCP client over bastiat-api /scrape_urls/ — stealth web scraping for Sancho Claudito"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.26.0",
]

[project.scripts]
scrapling-mnt = "scrapling_mnt.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrapling_mnt"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
